--- a/importfbx/importfbx2008.vcproj
+++ b/importfbx/importfbx2008.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(FBX_SDK)\include;$(FBX_SDK)\include\kbaselib;$(DXSDK_DIR)\include"
+				AdditionalIncludeDirectories="$(FBX_SDK)\include;$(FBX_SDK)\include\kbaselib"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;KFBX_PLUGIN;KFBX_FBXSDK;KFBX_NODLL;K_PLUGIN;K_FBXSDK;K_NODLL"
 				MinimalRebuild="true"
 				ExceptionHandling="1"
@@ -67,7 +67,7 @@
 				AdditionalDependencies="fbxsdk_md2008d.lib d3d9.lib d3dx9.lib wininet.lib"
 				OutputFile="$(OutDir)\ContentExporter.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(DXSDK_DIR)\lib\x86&quot;;&quot;$(FBX_SDK)\lib&quot;"
+				AdditionalLibraryDirectories="$(FBX_SDK)\lib"
 				GenerateManifest="true"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="libcmt.lib libcmtd.lib"
@@ -126,7 +126,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories="$(FBX_SDK)\include;$(FBX_SDK)\include\kbaselib;$(DXSDK_DIR)\include"
+				AdditionalIncludeDirectories="$(FBX_SDK)\include;$(FBX_SDK)\include\kbaselib"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;KFBX_PLUGIN;KFBX_FBXSDK;KFBX_NODLL;K_PLUGIN;K_FBXSDK;K_NODLL"
 				ExceptionHandling="1"
 				RuntimeLibrary="2"
@@ -150,7 +150,7 @@
 				AdditionalDependencies="fbxsdk_md2008.lib d3d9.lib d3dx9.lib wininet.lib"
 				OutputFile="$(OutDir)\ContentExporter.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(DXSDK_DIR)\lib\x86&quot;;&quot;$(FBX_SDK)\lib&quot;"
+				AdditionalLibraryDirectories="$(FBX_SDK)\lib"
 				GenerateManifest="true"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="libcmt.lib;libcmtd.lib"
